--- a/style.css
+++ b/style.css
@@ -1,81 +1,105 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;400&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
-#container{
 
-
-    background-color:#22223B ;
-    width: 527px;
-    height: 739;
-   
+*{
+    font-family: "JetBrains Mono";
+    background-color:#777586 ;
+}
+button:hover{
+  
+}
+#del{
+    font-family: "Kalam";
+}
+h1{
+    font-size: 60px;
+    margin: auto;
+    width: 350px;
+    padding-bottom: 30px;
+    color: #ABA9BB;
+}
+.calculator{
+    flex-direction: column;
     display: flex;
-    align-items: center;
-    justify-content: center;
-   
-   
-  }
-    
+    width: 309px;
+    background-color: #22223B;
+    padding: 10px;
+    height: 500px;
+    border-radius: 3%;
 
-#buttons{
-    display: grid;
-    grid-template-columns: repeat(4,1fr) ;
+    margin: auto;
+  
 }
-
-.riga{
-    display: grid;
-    grid-template-columns:repeat(4,1fr) ;
-    grid-gap: 10px;
+#firstOperandDisplay{
+    text-align: left;
 }
-button{
-    height: 85px;
-    width: 85px;
-    font-size: 32px;
+.row{
+    flex-direction: row;
+    display: flex;
+    flex: auto;
 }
-div{
-    height: min-content;
-    width: min-content;
-    font-family: 'JetBrains Mono';
-    font-size: 32px;
-    
-}
-.number{
+.number , .operation, #point, .display,.service{
+   /* width: 30px;
+    height: 30px;*/
+    border: 1px solid #22223B ;
+    padding: 2px;
+    flex: 1;
     text-align: center;
     background-color: #4A4E69;
-    color: #F2E9E4;
+    color:#F2E9E4 ;
+    font-size: 20px;
+
 }
-.operation{
-    background-color:#9A8C98 ;
-    color: black;
+.number , .operation, #point,.service{
+    border-radius: 5%;
+}
+
+.number:hover{
+    background-color: #464555;
+    transition: 0.7s;
+}
+.operation:hover{
+    background-color: #9e6667;
+    transition: 0.7s;
+
+}
+.service:hover{
+    
+        background-color: #9e6667;
+        transition: 0.7s;
+    
     
 }
-#backspace, #delete{
-    background-color:#D69A9A ;
+#point:hover{
+    background-color: #464555;
+    transition: 0.7s;
 }
-#backspace{
-    font-family: 'Kalam';
+.operation{
+    background-color: #D69A9A;
+    color: black;
+}
+.service{
+    background-color: #D69A9A;
+    color: black;
 }
 #display{
-    min-width: 422px;
-    min-height: 145px;
+    display: flex;
+    justify-content: end;
+    align-content: flex-end;
+    flex-direction: column;
+
+}
+
+.display{
     text-align: right;
+    
+    padding: 5px;
     background-color: #D9D9D9;
+    color: black;
+    border: none;
 }
-#equal{
-   
-   grid-row:span 2;
-   min-width:85px ;
-   min-height: 170px;
-
-    background-color: #C9ADA7;
-    color: #22223B;
-}
-#virgola{
-    background-color: #F2E9E4;
-    color: #22223B;
-}
-#zero{
-    grid-column: span 2;
-    min-height:85px ;
-    min-width: 170px;
-
+footer{
+    padding-top: 80px;
+    text-align: center;
 }
